# u-lang

./: .gitignore  AI_RULES.md  ARCHITECTURE.md  CLAUDE.md  COMBINATORICS.md  INCONSISTENCIES.md  INVESTIGATION_MATERIALISM.md  LICENSE  MEMORY_MODEL.md  PROGRESS.md  README.md  RUNTIME_STATUS.md  SELFHOST_PLAN.md  SPECIFICATION.md  SPECIFICATION_COMPLETE.md  SPECIFICATION_v1.md  test_generics.u  todos.db
bench/: gen_content.py  generate.py  generate.u
bench/content/: article_0000.md  article_0002.md  article_0006.md  article_0007.md  article_0008.md  article_0010.md  article_0012.md  article_0013.md  article_0014.md  article_0015.md  article_0018.md  article_0020.md  article_0023.md  article_0024.md  article_0025.md  article_0026.md  article_0027.md  article_0029.md  article_0031.md  article_0034.md  article_0036.md  article_0037.md  article_0039.md  article_0040.md  article_0043.md  article_0045.md  article_0046.md  article_0047.md  article_0048.md  article_0051.md  article_0052.md  article_0054.md  article_0058.md  article_0060.md  article_0067.md  article_0068.md  article_0069.md  article_0071.md  article_0072.md  article_0073.md  (+456 more)
bench/output-python/: article_0007.html  article_0008.html  article_0010.html  article_0011.html  article_0012.html  article_0014.html  article_0015.html  article_0026.html  article_0056.html  article_0060.html  article_0071.html  article_0088.html  article_0104.html  (+161 more)
content/: index.md  test.md
core/: io.rs  io.u
dist-python/: index.html
docs/: AI_RULES.md  CHANNELS_IMPL.md  CORE_REQUIREMENTS.md  FEATURES.md  MEMORY_MODEL_CURRENT.md  PROGRESS.md  PROTOTYPES.md  SPEC.md  VISUAL_OVERVIEW.md  goroutines_scaling_analysis.md
examples/: README.md  TESTS_INDEX.md  accounting_wrapper.u  basic_types.u  becoming.u  calc.u  channel_test.u  complete_demo.u  concurrency_10k_goroutines.u  concurrent_types.u  enum_types.u  fast_math.rs  fault_tolerance.u  features_test.u  function_types.u  hello.u  http_server.u  http_server_complete.u  json_test.u  lifecycle_test.u  list_types.u  maybe_being_nothing.u  memory_model_test.u  memory_real.u  memory_test.u  mutation_demo.u  nothing_with_context.u  nothing_with_operation.u  objects.u  option_some_none.u  parser_practical_test.u  print.u  race_check.u  raw_string_test.u  rc_test.u  reference_test.u  report.u  server.u  server_router.u  shapes.u  (+40 more)
public/: about.html  index.html  test.html
runtime/: Cargo.toml
runtime/src/: lib.rs
spec/: SPEC.md
templates/: page.html
transpiler/: Cargo.toml
transpiler/src/: ast.rs  cycle_detector.rs  error_mapper.rs  final_fix.py  fix_all.py  fix_errors.py  fix_errors2.py  fix_fields.py  fix_final.py  fix_final_v2.py  fix_simple.py  fix_smart.py  fix_typeerror.py  fix_v3.py  formatter.rs  generator.rs  interpreter.rs  lib.rs  main.rs  ownership.rs  parser.rs  size_checker.rs  type_checker.rs  u.pest
(+1405 files in other folders)
