[package]
name = "u-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime library for the U programming language"

[features]
default = []
sqlite = ["dep:rusqlite"]
http = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes"]
json = ["dep:serde_json"]
full = ["sqlite", "http", "json"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
serde_json = { version = "1.0", optional = true }
# Pin zerocopy to avoid AVX512 issue on nightly
zerocopy = "=0.8.14"
