[package]
name = "u"
version = "0.1.0"
edition = "2021"
description = "Transpiler for the U programming language: U syntax → Rust code"

[dependencies]
# Parser
pest = "2.7"
pest_derive = "2.7"

# CLI
clap = { version = "4", features = ["derive"] }

# SQLite (bundled — no system deps)
rusqlite = { version = "0.39", features = ["bundled"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
